--- a/index.html
+++ b/index.html
@@ -1,1 +1,206 @@
-<h1>dddddddddddddddd</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <style>
+        .father {
+            width: 1000px;
+            margin-left: auto;
+            margin-right: auto;
+            height: 100px;
+        }
+
+        .box1 {
+            width: 180px;
+            height: 100px;
+            background-color: red;
+            float: left;
+            margin-left: 3px;
+            padding: 1px;
+        }
+
+        .box1 ul li {
+            float: left;
+            margin: 0 auto;
+            text-align: center;
+            line-height: 0.5em;
+
+        }
+
+        .box2 {
+            width: 180px;
+            height: 100px;
+            background-color: green;
+            float: left;
+            margin-left: 3px;
+        }
+
+        .box3 {
+            width: 180px;
+            height: 100px;
+            background-color: red;
+            float: left;
+            margin-left: 3px;
+        }
+
+        .box4 {
+            width: 180px;
+            height: 100px;
+            background-color: green;
+            float: left;
+            margin-left: 3px;
+        }
+
+        .box5 {
+            width: 180px;
+            height: 100px;
+            background-color: red;
+            float: left;
+            margin-left: 3px;
+        }
+
+        .box6 {
+            width: 70px;
+            height: 100px;
+            background-color: green;
+            float: left;
+            margin-right: 3px;
+            margin-left: 2px;
+        }
+
+        .hezi2 {
+            width: 990px;
+            height: 30px;
+            border: 1px solid;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 8px;
+            background-color: pink;
+        }
+
+        .hezi3 {
+            width: 990px;
+            height: 900px;
+            border: 1px solid;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 3px;
+
+        }
+
+        .hezi3_1 {
+            width: 250px;
+            height: 900px;
+            border: 1px solid;
+            float: left;
+            background-color: #70ff69;
+        }
+
+        .hezi3_2 {
+            width: 360px;
+            height: 300px;
+            border: 1px solid;
+            float: left;
+            margin-left: 7px;;
+            background-color: pink;
+        }
+
+        .hezi3_3 {
+            width: 360px;
+            height: 900px;
+            border: 1px solid;
+            float: left;
+            margin-left: 7px;
+            background-color: blue;
+        }
+
+        .hezi3_2_1 {
+            float: left;
+            border: 1px solid;
+        }
+
+        .hezi3_2_2 {
+            float: left;
+            border: 1px solid;
+        }
+
+        .hezi3_2_3 {
+            float: left;
+            border: 1px solid;
+        }
+        .hezi3_2_4{
+            width: 360px;
+            height: 245px;
+            border: 1px solid;
+            margin-top:25px ;
+        }
+
+
+
+        .hezi3_3_1{
+            float: left;
+            border: 1px solid;
+        }
+        .hezi3_3_2{
+            float: left;
+            border: 1px solid;
+
+        }
+
+    </style>
+    <title></title>
+</head>
+<body>
+<div class="father">
+
+    <div class="box1">
+        <ul style="list-style-type:none">
+            <li>美食</li>
+            <li>旅游</li>
+            <li>摄影</li>
+        </ul>
+        <br/>
+        <ul style="list-style-type:none">
+            <li>阿迪</li>
+            <li>等等</li>
+            <li> 额外</li>
+            <br/>
+        </ul>
+        <ul style="list-style-type:none">
+            <li>为</li>
+            <li>额额发</li>
+            <li>谔谔</li>
+            <br/>
+        </ul>
+    </div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <div class="box5"></div>
+    <div class="box6"></div>
+
+
+</div>
+
+<div class="hezi2"></div>
+
+<div class="hezi3">
+    <div class="hezi3_1"></div>
+    <div class="hezi3_2">
+        <div class="hezi3_2_1">图片</div>
+        <div class="hezi3_2_2">专栏</div>
+        <div class="hezi3_2_3">热点</div>
+        <div class="hezi3_2_4">
+            内容页
+        </div>
+    </div>
+    <div class="hezi3_3">
+        <div class="hezi3_3_1">新闻</div>
+        <div class="hezi3_3_2">看浙江</div>
+
+    </div>
+</div>
+
+
+</body>
+</html>
